# LearningModernCppUsingTests

./: CMakeLists.txt
Lib/: Person.cpp  Person.h  RValurOrLValue.h
TestBin/: TestMain.cpp
TestLib/: TestUtil.cpp  TestUtil.h
Tests/: PersonTest.h  RValueOrLValueTest.h
